# python-template

./: .coveragerc  .gitignore  Makefile  README.md  main.py  prospector.yaml  pyproject.toml
.github/workflows/: validate.yaml
examples/: main.py
lib/engine/: __init__.py  serializer.py
lib/models/: __init__.py  post.py
src/project_template/engine/: __init__.py  serializer.py
src/project_template/models/: __init__.py  post.py
tests/: test_utils.py
tests/project_template/: test_serializer.py
tests/utils/: __init__.py  project_template_test_base.py
